force-app/main/default/objects/Customer_Profiling_Session__c/Customer_Profiling_Session__c.object-meta.xml
<CustomObject>
    <label>Customer Profiling Session</label>
    <nameField>
        <label>Session ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Profiling Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>