force-app/main/default/objects/Customer_Profiling_Session__c/fields/Answer_now_later__c.field-meta.xml
<CustomField>
    <fullName>Answer_now_later__c</fullName>
    <label>Answer now/later?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Answer Now</fullName>
            </value>
            <value>
                <fullName>Answer Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>