force-app/main/default/objects/Customer_Profiling_Session__c/fields/Appointment_Booked__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Booked__c</fullName>
    <label>Appointment Booked?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>