force-app/main/default/objects/Customer_Profiling_Session__c/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <label>Appointment Time</label>
    <type>Time</type>
</CustomField>