force-app/main/default/objects/Customer_Profiling_Session__c/fields/BR_1_Study_Table__c.field-meta.xml
<CustomField>
    <fullName>BR_1_Study_Table__c</fullName>
    <label>BR 1 Study Table</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t need it</fullName>
            </value>
            <value>
                <fullName>Glass Unit</fullName>
            </value>
            <value>
                <fullName>Open Storage</fullName>
            </value>
            <value>
                <fullName>Drawers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>