force-app/main/default/objects/Customer_Profiling_Session__c/fields/BR_2_TV_Unit__c.field-meta.xml
<CustomField>
    <fullName>BR_2_TV_Unit__c</fullName>
    <label>BR 2 TV Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t need it</fullName>
            </value>
            <value>
                <fullName>Wall Paneling</fullName>
            </value>
            <value>
                <fullName>Space for Showpieces</fullName>
            </value>
            <value>
                <fullName>Glass Unit</fullName>
            </value>
            <value>
                <fullName>Large TV Size</fullName>
            </value>
            <value>
                <fullName>Additional Storage</fullName>
            </value>
            <value>
                <fullName>Drawers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>