force-app/main/default/objects/Customer_Profiling_Session__c/fields/BR_3_Primary_User__c.field-meta.xml
<CustomField>
    <fullName>BR_3_Primary_User__c</fullName>
    <label>BR 3 Primary User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>