force-app/main/default/objects/Customer_Profiling_Session__c/fields/BR_3_TV_Unit__c.field-meta.xml
<CustomField>
    <fullName>BR_3_TV_Unit__c</fullName>
    <label>BR 3 TV Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t need it</fullName>
            </value>
            <value>
                <fullName>Wall Paneling</fullName>
            </value>
            <value>
                <fullName>Space for Showpieces</fullName>
            </value>
            <value>
                <fullName>Glass Unit</fullName>
            </value>
            <value>
                <fullName>Large TV Size</fullName>
            </value>
            <value>
                <fullName>Additional Storage</fullName>
            </value>
            <value>
                <fullName>Drawers</fullName>
            </value>
            <value>
                <fullName>Attribute 1</fullName>
                <isActive>false</isActive>
                <label>Attribute 1</label>
            </value>
            <value>
                <fullName>Attribute 2</fullName>
                <isActive>false</isActive>
                <label>Attribute 2</label>
            </value>
            <value>
                <fullName>Attribute 3</fullName>
                <isActive>false</isActive>
                <label>Attribute 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>