force-app/main/default/objects/Customer_Profiling_Session__c/fields/BR_3_Wardrobe_Type__c.field-meta.xml
<CustomField>
    <fullName>BR_3_Wardrobe_Type__c</fullName>
    <label>BR 3 Wardrobe Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>