force-app/main/default/objects/Customer_Profiling_Session__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5L - 4L</fullName>
            </value>
            <value>
                <fullName>4L - 6L</fullName>
            </value>
            <value>
                <fullName>6L - 8L</fullName>
            </value>
            <value>
                <fullName>8L - 10L</fullName>
            </value>
            <value>
                <fullName>10L+</fullName>
            </value>
            <value>
                <fullName>Upto 1.5L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>