force-app/main/default/objects/Customer_Profiling_Session__c/fields/Family_members_age_traits__c.field-meta.xml
<CustomField>
    <fullName>Family_members_age_traits__c</fullName>
    <label>Family members, age &amp; traits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>