force-app/main/default/objects/Customer_Profiling_Session__c/fields/Feature_Preference_2__c.field-meta.xml
<CustomField>
    <fullName>Feature_Preference_2__c</fullName>
    <label>Feature Preference 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Storage and Ease of Use</fullName>
            </value>
            <value>
                <fullName>Design Aesthetics</fullName>
            </value>
            <value>
                <fullName>Low Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>