force-app/main/default/objects/Customer_Profiling_Session__c/fields/First_home__c.field-meta.xml
<CustomField>
    <fullName>First_home__c</fullName>
    <label>First Home?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>