force-app/main/default/objects/Customer_Profiling_Session__c/fields/Interior_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interior_Start_Date__c</fullName>
    <label>Interior Start Date</label>
    <type>Date</type>
</CustomField>