force-app/main/default/objects/Customer_Profiling_Session__c/fields/Interiors_Required__c.field-meta.xml
<CustomField>
    <fullName>Interiors_Required__c</fullName>
    <label>Interiors Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Wardrobe</fullName>
            </value>
            <value>
                <fullName>End-to-End Interiors</fullName>
            </value>
            <value>
                <fullName>Wardrobe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>