force-app/main/default/objects/Customer_Profiling_Session__c/fields/Kitchen_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Accessories__c</fullName>
    <label>Kitchen Accessories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>