force-app/main/default/objects/Customer_Profiling_Session__c/fields/Kitchen_appliances__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_appliances__c</fullName>
    <label>Kitchen appliances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hob and Chimney</fullName>
            </value>
            <value>
                <fullName>Built-in Microwave/Oven</fullName>
            </value>
            <value>
                <fullName>Countertop Microwave/Oven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>