force-app/main/default/objects/Customer_Profiling_Session__c/fields/Kitchen_Color__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Color__c</fullName>
    <label>Kitchen Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>