force-app/main/default/objects/Customer_Profiling_Session__c/fields/Kitchen_Finish__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Finish__c</fullName>
    <label>Kitchen Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>