force-app/main/default/objects/Customer_Profiling_Session__c/fields/Kitchen_Layout__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Layout__c</fullName>
    <label>Kitchen Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>