force-app/main/default/objects/Customer_Profiling_Session__c/fields/Kitchen_Material__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Material__c</fullName>
    <label>Kitchen Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>