force-app/main/default/objects/Customer_Profiling_Session__c/fields/LR_Crockery__c.field-meta.xml
<CustomField>
    <fullName>LR_Crockery__c</fullName>
    <label>LR Crockery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t need it</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Space for Showpieces</fullName>
            </value>
            <value>
                <fullName>Glass Unit</fullName>
            </value>
            <value>
                <fullName>Drawers</fullName>
            </value>
            <value>
                <fullName>Attribute 1</fullName>
                <isActive>false</isActive>
                <label>Attribute 1</label>
            </value>
            <value>
                <fullName>Attribute 2</fullName>
                <isActive>false</isActive>
                <label>Attribute 2</label>
            </value>
            <value>
                <fullName>Attribute 3</fullName>
                <isActive>false</isActive>
                <label>Attribute 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>