force-app/main/default/objects/Customer_Profiling_Session__c/fields/LR_Pooja__c.field-meta.xml
<CustomField>
    <fullName>LR_Pooja__c</fullName>
    <label>LR Pooja</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attribute 1</fullName>
            </value>
            <value>
                <fullName>Attribute 2</fullName>
            </value>
            <value>
                <fullName>Attribute 3</fullName>
            </value>
            <value>
                <fullName>I don&apos;t need it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>