force-app/main/default/objects/Customer_Profiling_Session__c/fields/Possession_Status__c.field-meta.xml
<CustomField>
    <fullName>Possession_Status__c</fullName>
    <label>Possession Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>