force-app/main/default/objects/Customer_Profiling_Session__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>