force-app/main/default/objects/Customer_Profiling_Session__c/fields/Property_Config__c.field-meta.xml
<CustomField>
    <fullName>Property_Config__c</fullName>
    <label>Property Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>