force-app/main/default/objects/Customer_Profiling_Session__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <label>Property Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>