force-app/main/default/objects/Customer_Profiling_Session__c/fields/Purpose_of_Interiors__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Interiors__c</fullName>
    <label>Purpose of Interiors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Move-in</fullName>
            </value>
            <value>
                <fullName>Rent out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>