force-app/main/default/objects/Customer_Profiling_Session__c/fields/Regional_Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Regional_Language_Preference__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>