force-app/main/default/objects/Customer_Profiling_Session__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Profiling Sessions</relationshipLabel>
    <relationshipName>Customer_Profiling_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>