force-app/main/default/objects/Customer_Profiling_Session__c/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <label>Showroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>