force-app/main/default/objects/Customer_Profiling_Session__c/fields/Start_Source__c.field-meta.xml
<CustomField>
    <fullName>Start_Source__c</fullName>
    <label>Start Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>