force-app/main/default/objects/Customer_Profiling_Session__c/fields/Style_Preference__c.field-meta.xml
<CustomField>
    <fullName>Style_Preference__c</fullName>
    <label>Style Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Transitional</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Eclectic/Chic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>